# trainable-bilateral-filter-source

./: .gitignore  MANIFEST.in  README.md  README.rst  bilateral_filter_layer.py  example_filter.py  example_optimization.py  gradcheck.py  requirements.txt  setup.py
csrc/: CMakeLists.txt  bf_layer_cpu_backward.cpp  bf_layer_cpu_forward.cpp  bf_layer_gpu_backward.cu  bf_layer_gpu_forward.cu  bilateral.h  bilateralfilter_cpu.cpp  bilateralfilter_gpu.cu  main.cu
utils/: cuda_error_check.h
